--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-uuid": "^1.0.2",
     "spotify-web-api-js": "^1.5.1",
+    "uuidv4": "^6.2.11",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
